# network_accounting

./: .gitignore  README.md  pyproject.toml
experiments/: 00_Intro_Experiments.ipynb  00_SocialCredit.ipynb  Freeriders_p2p.ipynb  MLReputation.ipynb  NetworkSampling.ipynb  ReputationBenchmarking.ipynb  Selfish_Gossip.ipynb  common.py
experiments/datasets/: wg_pPeer_12:peer.gel
ledger0/: application_handler.py  common.py  crawler.py  graph_storage.py  ledger.py  reputation.py
p2psimpy/: messages.py  peer.py
p2psimpy/services/: base.py  connection_manager.py  gossip.py  message_producer.py
p2psimpy/storage/: simple.py
trust/: __init__.py  bartercast.py  connectivity.py  hitting_time.py  maxflow_based.py  netflow.py  pagerank.py  random_walks.py  reciprocal_scaled_bounded_hitting_time.py  reciprocal_scaled_pagerank.py  trustrank.py
