[tool.poetry]
name = "network_accounting"
version = "1.0.0"
description = "A collection of trust and reputation function over the accounting graph. The functions are experimentrally evaluated with a simulation against attacker robustness and accuracy."
authors = ["grimadas <bulat.nasrulin@gmail.com>"]
license = "afl-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.0"
igraph = "^0.9.8"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
